🐛 fix : add overflow limit

--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
 
   max-width: 90%; 
   margin: 0 auto;
+  overflow: auto;
+  max-height: 75vh;
 }
 
 h1 {
